fix: made navbar menu toggler visible in dark mode

--- a/static/dark.css
+++ b/static/dark.css
@@ -42,6 +42,10 @@ hr {
   color: #e9ebf0 !important;
 }
 
+.navbar-toggler-icon {
+  filter: invert(1);
+}
+
 .dropdown-menu {
   background-color: #1a1d24 !important;
   border-color: #282c32 !important;
